# bio-streams

./: Cargo.toml  README.md
examples/: aminokmers.rs  fqcheck.rs
src/: error.rs  fasta.rs  fastq.rs  lib.rs  record.rs  sam.rs  stream.rs
