[package]
name = "bio-streams"
version = "0.3.0"
edition = "2021"

[dependencies]
futures = "0.3"
bio-seq = { path="../bio-seq" }

[dev-dependencies]
flate2 = "1.0"
clap = { version="4", features=["derive"] }
bio-seq = { path="../bio-seq" }

[[example]]
name = "fqcheck"

[[example]]
name = "aminokmers"
