[package]
name = "bio-streams"
version = "0.3.0"
edition = "2021"
authors = ["jeff-k <jeff_k@fastmail.com>"]
description = "Streaming bioinformatics data types"
homepage = "https://github.com/jeff-k/bio-streams"
license = "MIT"
keywords = ["bioinformatics", "fasta", "fastq", "genomics"]
readme = "README.md"

[dependencies]
futures = "0.3"
futures-test = "0.3"
bio-seq = "0.12"

[dev-dependencies]
flate2 = "1"
clap = { version="4", features=["derive"] }
bio-seq = "0.12"

[[example]]
name = "fqcheck"

[[example]]
name = "aminokmers"
